--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@
 }
 
 .card {
-  width: 80%;
-  margin: 40px auto;
+  width: 100%;
+  margin: 15px auto;
   border: 5px solid gray;
   box-shadow: 5px 10px #888888;
+}
